tests/types_first_destructuring/types_first_destructuring.exp
Error ------------------------------------------------------------------------------------------------------ test.js:3:1

Cannot cast `a` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:3:1
   3| a as string;
      ^

References:
   destr.js:1:24
   1| var { a, b: xb }: { a: number, b: number } = { a: 0, b: 0 };
                             ^^^^^^ [1]
   test.js:3:6
   3| a as string;
           ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:5:1

Cannot cast `b` to string because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:5:1
   5| b as string;
      ^

References:
   destr.js:1:35
   1| var { a, b: xb }: { a: number, b: number } = { a: 0, b: 0 };
                                        ^^^^^^ [1]
   test.js:5:6
   5| b as string;
           ^^^^^^ [2]



Found 2 errors
